# ClipLink

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  windows-build.yml
docs/superpowers/plans/: 2026-06-20-cliplink-implementation.md
docs/superpowers/specs/: 2026-06-20-cliplink-design.md
src/client/: clipboard_watcher.cpp  clipboard_watcher.h  main.cpp  main_window.cpp  main_window.h  network_client.cpp  network_client.h
src/core/: protocol.cpp  protocol.h  recent_ids.cpp  recent_ids.h
src/server/: main.cpp  relay_server.cpp  relay_server.h
tests/: test_clipboard_watcher.cpp  test_main_window.cpp  test_network_client.cpp  test_protocol.cpp  test_recent_ids.cpp  test_relay_server.cpp
tools/: build_cliplink_report.py
